--- a/app/src/main/res/layout/fragment_add_notes.xml
+++ b/app/src/main/res/layout/fragment_add_notes.xml
@@ -1,111 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FAFAFA"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="16dp">
+<layout>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:background="@android:color/white"
-        android:elevation="0dp"
-        android:layout_height="60dp"
-        app:cardCornerRadius="10dp">
+        android:layout_height="match_parent"
+        android:background="#FAFAFA"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <EditText
-            android:id="@+id/editTextTitle"
-            android:layout_marginStart="15dp"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:background="@android:color/white"
+            android:elevation="0dp"
+            app:cardCornerRadius="10dp">
+
+            <EditText
+                android:id="@+id/editTextTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:background="@android:color/white"
+                android:hint="Name your task"
+                android:inputType="text" />
+
+            <View
+                android:layout_width="8dp"
+                android:layout_height="match_parent"
+                android:background="@color/orange" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Choose Category"
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:textColor="@color/gray" />
+
+        <TextView
+            android:id="@+id/work"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:drawableStart="@drawable/ic_circle_orange"
+            android:drawablePadding="5dp"
+            android:text="Work" />
+
+        <TextView
+            android:id="@+id/personal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:drawableStart="@drawable/ic_circle_purple"
+            android:drawablePadding="5dp"
+            android:text="Personal" />
+
+        <TextView
+            android:id="@+id/health"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:drawableStart="@drawable/ic_circle_blue"
+            android:drawablePadding="5dp"
+            android:text="Health" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Write Short description"
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:textColor="@color/gray" />
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Name your task"
-            android:inputType="text" />
-
-        <View
-            android:layout_width="8dp"
-            android:layout_height="match_parent"
-            android:background="@color/orange"
-            />
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Choose Category"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textColor="@color/gray" />
-
-    <TextView
-        android:id="@+id/work"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:drawableStart="@drawable/ic_circle_orange"
-        android:drawablePadding="5dp"
-        android:text="Work" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:drawableStart="@drawable/ic_circle_purple"
-        android:drawablePadding="5dp"
-        android:id="@+id/personal"
-        android:text="Personal" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:drawableStart="@drawable/ic_circle_blue"
-        android:drawablePadding="5dp"
-        android:id="@+id/health"
-        android:text="Health" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Write Short description"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textColor="@color/gray" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:background="@android:color/white"
-        android:elevation="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="160dp"
-        app:cardCornerRadius="10dp">
-
-        <EditText
-            android:id="@+id/editTextDescription"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="message..."
-            android:gravity="top"
+            android:layout_height="160dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="15dp"
             android:background="@android:color/white"
-            android:inputType="textMultiLine" />
+            android:elevation="0dp"
+            app:cardCornerRadius="10dp">
 
-        <View
-            android:layout_width="8dp"
-            android:layout_height="match_parent"
+            <EditText
+                android:id="@+id/editTextDescription"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/white"
+                android:gravity="top"
+                android:hint="message..."
+                android:inputType="textMultiLine" />
+
+            <View
+                android:layout_width="8dp"
+                android:layout_height="match_parent"
+                android:background="@color/orange" />
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/addTask"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:background="@color/orange"
-            />
-    </androidx.cardview.widget.CardView>
-
-    <Button
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:background="@color/orange"
-        android:text="Save Task"
-        android:id="@+id/addTask"
-        />
-</LinearLayout>
+            android:text="Save Task"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+</layout>
