--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,13 @@
     <color name="purple">#8B5BD9</color>
     <color name="blue">#1377EB</color>
 
+    <color name="turquoise_green">#A4DEAD</color>
+    <color name="light_beige">#FFFFBF</color>
+    <color name="sunset">#FFD4B8</color>
+    <color name="warm_blue">#df5555e0</color>
+
+
+
 
     <color name="grey_40">#999999</color>
     <color name="grey_60">#666666</color>
